# spc2vgm

./: .gitignore  .gitmodules  CMakeLists.txt  INFO_FOR_AI_AND_DEV.md  README.md  THIRD_PARTY_NOTICES.md
.github/workflows/: ci.yml
scripts/: fetch_snesmusic.cmd  fetch_snesmusic.py  optimize_vgm_directory.sh  package_vgmrips.cmd  package_vgmrips.py
src/: spc2vgm.cpp  spc_trace_hook.h
tools/: spc_render.cpp  spc_trace.cpp  unarr_extract.c
